k8s/middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: cornel-web
spec:
  redirectScheme:
    scheme: https
    permanent: true
