k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cornel-web
  labels:
    app.kubernetes.io/name: cornel-web
