k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-web
  namespace: cornel-web
  labels:
    app: project-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-web
  template:
    metadata:
      labels:
        app: project-web
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:1.27-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: site-content
              mountPath: /usr/share/nginx/html
              readOnly: true
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
      volumes:
        - name: site-content
          configMap:
            name: project-web-content
