k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-web
  namespace: cornel-web
  labels:
    app: project-web
spec:
  type: ClusterIP
  selector:
    app: project-web
  ports:
    - name: http
      port: 80
      targetPort: http
